dgw_processor/ReqBlockParser.py
# Generated from ReqBlock.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ReqBlockParser ( Parser ):

    grammarFileName = "ReqBlock.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'@'", "'>='", "'>'", "'<='", 
                     "'<'", "'='", "'('", "')'", "','", "'+'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "BEGIN", "ENDDOT", "STRING", 
                      "LABEL", "REMARK", "CREDITS", "MINCREDITS", "MAXCREDITS", 
                      "NONCOURSES", "CLASSES", "MINCLASSES", "MAXCLASSES", 
                      "MINRES", "MINGPA", "MINGRADE", "MAXPASSFAIL", "PROXYADVICE", 
                      "EXCLUSIVE", "BLOCKTYPE", "OR", "AND", "INFROM", "TAG", 
                      "WILDNUMBER", "WILDSYMBOL", "RANGE", "NUMBER", "SYMBOL", 
                      "ALPHANUM", "WILDCARD", "GE", "GT", "LE", "LT", "EQ", 
                      "LP", "RP", "COMMA", "PLUS", "HIDE", "DECIDE", "COMMENT", 
                      "LOG", "WHITESPACE" ]

    RULE_req_block = 0
    RULE_head = 1
    RULE_body = 2
    RULE_class_item = 3
    RULE_or_courses = 4
    RULE_and_courses = 5
    RULE_mingpa = 6
    RULE_minres = 7
    RULE_mingrade = 8
    RULE_numclasses = 9
    RULE_numcredits = 10
    RULE_maxclasses = 11
    RULE_maxcredits = 12
    RULE_proxy_advice = 13
    RULE_exclusive = 14
    RULE_maxpassfail = 15
    RULE_noncourses = 16
    RULE_remark = 17
    RULE_label = 18
    RULE_symbol = 19

    ruleNames =  [ "req_block", "head", "body", "class_item", "or_courses", 
                   "and_courses", "mingpa", "minres", "mingrade", "numclasses", 
                   "numcredits", "maxclasses", "maxcredits", "proxy_advice", 
                   "exclusive", "maxpassfail", "noncourses", "remark", "label", 
                   "symbol" ]

    EOF = Token.EOF
    T__0=1
    BEGIN=2
    ENDDOT=3
    STRING=4
    LABEL=5
    REMARK=6
    CREDITS=7
    MINCREDITS=8
    MAXCREDITS=9
    NONCOURSES=10
    CLASSES=11
    MINCLASSES=12
    MAXCLASSES=13
    MINRES=14
    MINGPA=15
    MINGRADE=16
    MAXPASSFAIL=17
    PROXYADVICE=18
    EXCLUSIVE=19
    BLOCKTYPE=20
    OR=21
    AND=22
    INFROM=23
    TAG=24
    WILDNUMBER=25
    WILDSYMBOL=26
    RANGE=27
    NUMBER=28
    SYMBOL=29
    ALPHANUM=30
    WILDCARD=31
    GE=32
    GT=33
    LE=34
    LT=35
    EQ=36
    LP=37
    RP=38
    COMMA=39
    PLUS=40
    HIDE=41
    DECIDE=42
    COMMENT=43
    LOG=44
    WHITESPACE=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Req_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(ReqBlockParser.BEGIN, 0)

        def head(self):
            return self.getTypedRuleContext(ReqBlockParser.HeadContext,0)


        def body(self):
            return self.getTypedRuleContext(ReqBlockParser.BodyContext,0)


        def ENDDOT(self):
            return self.getToken(ReqBlockParser.ENDDOT, 0)

        def getRuleIndex(self):
            return ReqBlockParser.RULE_req_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReq_block" ):
                listener.enterReq_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReq_block" ):
                listener.exitReq_block(self)




    def req_block(self):

        localctx = ReqBlockParser.Req_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_req_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(ReqBlockParser.BEGIN)
            self.state = 41
            self.head()
            self.state = 42
            self.match(ReqBlockParser.T__0)
            self.state = 43
            self.body()
            self.state = 44
            self.match(ReqBlockParser.ENDDOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mingpa(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.MingpaContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.MingpaContext,i)


        def minres(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.MinresContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.MinresContext,i)


        def mingrade(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.MingradeContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.MingradeContext,i)


        def numclasses(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.NumclassesContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.NumclassesContext,i)


        def numcredits(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.NumcreditsContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.NumcreditsContext,i)


        def maxcredits(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.MaxcreditsContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.MaxcreditsContext,i)


        def maxclasses(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.MaxclassesContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.MaxclassesContext,i)


        def maxpassfail(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.MaxpassfailContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.MaxpassfailContext,i)


        def proxy_advice(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.Proxy_adviceContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.Proxy_adviceContext,i)


        def exclusive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.ExclusiveContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.ExclusiveContext,i)


        def remark(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.RemarkContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.RemarkContext,i)


        def label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.LabelContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.LabelContext,i)


        def getRuleIndex(self):
            return ReqBlockParser.RULE_head

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHead" ):
                listener.enterHead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHead" ):
                listener.exitHead(self)




    def head(self):

        localctx = ReqBlockParser.HeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_head)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ReqBlockParser.LABEL) | (1 << ReqBlockParser.REMARK) | (1 << ReqBlockParser.MAXCREDITS) | (1 << ReqBlockParser.MAXCLASSES) | (1 << ReqBlockParser.MINRES) | (1 << ReqBlockParser.MINGPA) | (1 << ReqBlockParser.MINGRADE) | (1 << ReqBlockParser.MAXPASSFAIL) | (1 << ReqBlockParser.PROXYADVICE) | (1 << ReqBlockParser.EXCLUSIVE) | (1 << ReqBlockParser.RANGE) | (1 << ReqBlockParser.NUMBER))) != 0):
                self.state = 58
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 46
                    self.mingpa()
                    pass

                elif la_ == 2:
                    self.state = 47
                    self.minres()
                    pass

                elif la_ == 3:
                    self.state = 48
                    self.mingrade()
                    pass

                elif la_ == 4:
                    self.state = 49
                    self.numclasses()
                    pass

                elif la_ == 5:
                    self.state = 50
                    self.numcredits()
                    pass

                elif la_ == 6:
                    self.state = 51
                    self.maxcredits()
                    pass

                elif la_ == 7:
                    self.state = 52
                    self.maxclasses()
                    pass

                elif la_ == 8:
                    self.state = 53
                    self.maxpassfail()
                    pass

                elif la_ == 9:
                    self.state = 54
                    self.proxy_advice()
                    pass

                elif la_ == 10:
                    self.state = 55
                    self.exclusive()
                    pass

                elif la_ == 11:
                    self.state = 56
                    self.remark()
                    pass

                elif la_ == 12:
                    self.state = 57
                    self.label()
                    pass


                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ReqBlockParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = ReqBlockParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 63
                    self.matchWildcard() 
                self.state = 68
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ReqBlockParser.NUMBER, 0)

        def RANGE(self):
            return self.getToken(ReqBlockParser.RANGE, 0)

        def WILDNUMBER(self):
            return self.getToken(ReqBlockParser.WILDNUMBER, 0)

        def SYMBOL(self):
            return self.getToken(ReqBlockParser.SYMBOL, 0)

        def WILDSYMBOL(self):
            return self.getToken(ReqBlockParser.WILDSYMBOL, 0)

        def getRuleIndex(self):
            return ReqBlockParser.RULE_class_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_item" ):
                listener.enterClass_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_item" ):
                listener.exitClass_item(self)




    def class_item(self):

        localctx = ReqBlockParser.Class_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ReqBlockParser.WILDSYMBOL or _la==ReqBlockParser.SYMBOL:
                self.state = 69
                _la = self._input.LA(1)
                if not(_la==ReqBlockParser.WILDSYMBOL or _la==ReqBlockParser.SYMBOL):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 72
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ReqBlockParser.WILDNUMBER) | (1 << ReqBlockParser.RANGE) | (1 << ReqBlockParser.NUMBER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Or_coursesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.Class_itemContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.Class_itemContext,i)


        def INFROM(self):
            return self.getToken(ReqBlockParser.INFROM, 0)

        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(ReqBlockParser.OR)
            else:
                return self.getToken(ReqBlockParser.OR, i)

        def getRuleIndex(self):
            return ReqBlockParser.RULE_or_courses

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr_courses" ):
                listener.enterOr_courses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr_courses" ):
                listener.exitOr_courses(self)




    def or_courses(self):

        localctx = ReqBlockParser.Or_coursesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_or_courses)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ReqBlockParser.INFROM:
                self.state = 74
                self.match(ReqBlockParser.INFROM)


            self.state = 77
            self.class_item()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ReqBlockParser.OR:
                self.state = 78
                self.match(ReqBlockParser.OR)
                self.state = 79
                self.class_item()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class And_coursesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReqBlockParser.Class_itemContext)
            else:
                return self.getTypedRuleContext(ReqBlockParser.Class_itemContext,i)


        def INFROM(self):
            return self.getToken(ReqBlockParser.INFROM, 0)

        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(ReqBlockParser.AND)
            else:
                return self.getToken(ReqBlockParser.AND, i)

        def getRuleIndex(self):
            return ReqBlockParser.RULE_and_courses

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd_courses" ):
                listener.enterAnd_courses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd_courses" ):
                listener.exitAnd_courses(self)




    def and_courses(self):

        localctx = ReqBlockParser.And_coursesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_and_courses)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ReqBlockParser.INFROM:
                self.state = 85
                self.match(ReqBlockParser.INFROM)


            self.state = 88
            self.class_item()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ReqBlockParser.AND:
                self.state = 89
                self.match(ReqBlockParser.AND)
                self.state = 90
                self.class_item()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MingpaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINGPA(self):
            return self.getToken(ReqBlockParser.MINGPA, 0)

        def NUMBER(self):
            return self.getToken(ReqBlockParser.NUMBER, 0)

        def getRuleIndex(self):
            return ReqBlockParser.RULE_mingpa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMingpa" ):
                listener.enterMingpa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMingpa" ):
                listener.exitMingpa(self)




    def mingpa(self):

        localctx = ReqBlockParser.MingpaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mingpa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(ReqBlockParser.MINGPA)
            self.state = 97
            self.match(ReqBlockParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MinresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINRES(self):
            return self.getToken(ReqBlockParser.MINRES, 0)

        def NUMBER(self):
            return self.getToken(ReqBlockParser.NUMBER, 0)

        def CREDITS(self):
            return self.getToken(ReqBlockParser.CREDITS, 0)

        def CLASSES(self):
            return self.getToken(ReqBlockParser.CLASSES, 0)

        def getRuleIndex(self):
            return ReqBlockParser.RULE_minres

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinres" ):
                listener.enterMinres(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinres" ):
                listener.exitMinres(self)




    def minres(self):

        localctx = ReqBlockParser.MinresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_minres)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(ReqBlockParser.MINRES)
            self.state = 100
            self.match(ReqBlockParser.NUMBER)
            self.state = 101
            _la = self._input.LA(1)
            if not(_la==ReqBlockParser.CREDITS or _la==ReqBlockParser.CLASSES):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MingradeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINGRADE(self):
            return self.getToken(ReqBlockParser.MINGRADE, 0)

        def NUMBER(self):
            return self.getToken(ReqBlockParser.NUMBER, 0)

        def getRuleIndex(self):
            return ReqBlockParser.RULE_mingrade

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMingrade" ):
                listener.enterMingrade(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMingrade" ):
                listener.exitMingrade(self)




    def mingrade(self):

        localctx = ReqBlockParser.MingradeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mingrade)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(ReqBlockParser.MINGRADE)
            self.state = 104
            self.match(ReqBlockParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumclassesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ReqBlockParser.NUMBER, 0)

        def CLASSES(self):
            return self.getToken(ReqBlockParser.CLASSES, 0)

        def and_courses(self):
            return self.getTypedRuleContext(ReqBlockParser.And_coursesContext,0)


        def or_courses(self):
            return self.getTypedRuleContext(ReqBlockParser.Or_coursesContext,0)


        def getRuleIndex(self):
            return ReqBlockParser.RULE_numclasses

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumclasses" ):
                listener.enterNumclasses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumclasses" ):
                listener.exitNumclasses(self)




    def numclasses(self):

        localctx = ReqBlockParser.NumclassesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_numclasses)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(ReqBlockParser.NUMBER)
            self.state = 107
            self.match(ReqBlockParser.CLASSES)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 108
                self.and_courses()
                pass

            elif la_ == 2:
                self.state = 109
                self.or_courses()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumcreditsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREDITS(self):
            return self.getToken(ReqBlockParser.CREDITS, 0)

        def NUMBER(self):
            return self.getToken(ReqBlockParser.NUMBER, 0)

        def RANGE(self):
            return self.getToken(ReqBlockParser.RANGE, 0)

        def and_courses(self):
            return self.getTypedRuleContext(ReqBlockParser.And_coursesContext,0)


        def or_courses(self):
            return self.getTypedRuleContext(ReqBlockParser.Or_coursesContext,0)


        def TAG(self):
            return self.getToken(ReqBlockParser.TAG, 0)

        def getRuleIndex(self):
            return ReqBlockParser.RULE_numcredits

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumcredits" ):
                listener.enterNumcredits(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumcredits" ):
                listener.exitNumcredits(self)




    def numcredits(self):

        localctx = ReqBlockParser.NumcreditsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_numcredits)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not(_la==ReqBlockParser.RANGE or _la==ReqBlockParser.NUMBER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 113
            self.match(ReqBlockParser.CREDITS)
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 114
                self.and_courses()

            elif la_ == 2:
                self.state = 115
                self.or_courses()


            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ReqBlockParser.TAG:
                self.state = 118
                self.match(ReqBlockParser.TAG)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MaxclassesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAXCLASSES(self):
            return self.getToken(ReqBlockParser.MAXCLASSES, 0)

        def NUMBER(self):
            return self.getToken(ReqBlockParser.NUMBER, 0)
